# Kigen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/Kigen/: defines.hpp
include/Kigen/action/: Action.hpp  ActionControl.hpp  ActionMap.hpp  ActionRegistry.hpp  CallbackMap.hpp
include/Kigen/action/detail/: ActionControl.inl  ActionExpression.hpp  ActionLeaves.hpp  ActionNode.hpp  EventNode.hpp  LogicNode.hpp  RealtimeNode.hpp
include/Kigen/application/: ApplicationClock.hpp  BasicApplication.hpp  DefaultApplicationLoop.hpp  IApplication.hpp
include/Kigen/conversion/: Conversion.hpp  to_string.hpp
include/Kigen/graphics/: Vector.hpp  Window.hpp
include/Kigen/input/: AbstractDevice.hpp  AbstractDeviceController.hpp  DeviceBuffer.hpp  EventBuffer.hpp  InputControl.hpp  KeyActionType.hpp  Keyboard.hpp  KeyboardController.hpp  Mouse.hpp  MouseController.hpp  Window.hpp  WindowController.hpp  WindowStatus.hpp
include/Kigen/physics/: Manifold.hpp  Math.hpp  Models.hpp  PhysicsScene.hpp  RigidBody.hpp  Shape.hpp
include/Kigen/render/: Window.hpp
include/Kigen/resource/: ResourceControl.hpp  ResourceExceptions.hpp  ResourceHolder.hpp  ResourceLoader.hpp
include/Kigen/service/: Locator.hpp  Locator.inl  NullService.hpp  ServiceLocator.hpp  Services.hpp
include/Kigen/service/impl/: ServiceCamera.hpp
include/Kigen/service/interface/: ICamera.hpp  IService.hpp
include/Kigen/state/: State.hpp  StateControl.hpp
include/Kigen/utils/: Assertion.hpp  Destructible.hpp  Logger.hpp  Next.hpp  NonCopyable.hpp  Palette.hpp  Random.hpp  Type.hpp  Utils.hpp  Yield.hpp
include/Kigen/utils/locator/: IService.hpp  ListOfServices.hpp  Locator.hpp  Locator.inl  NullService.hpp
include/Kigen/utils/locator/impl/: ServiceCamera.hpp
include/Kigen/utils/locator/interface/: ICamera.hpp
include/Kigen/world/: Component.hpp  Entity.hpp  EntityFactory.hpp  PhysicsComponent.hpp  World.hpp
include/Kigen/world/component/: Component.hpp  DrawableCircle.hpp  DrawableCircleComponent.hpp  DrawableComponent.hpp  DrawableDebugBody.hpp  PhysicsBody.hpp  PhysicsComponent.hpp
include/Kigen/world/message/: Communicable.hpp  Message.hpp  MessageBus.hpp
include/Kigen/world/physics/: Collision.hpp  Manifold.hpp  Math.hpp  Models.hpp  PhysicalConstants.hpp  PhysicsConstants.hpp  PhysicsLaw.hpp  PhysicsScene.hpp  RigidBody.hpp  Shape.hpp
include/Kigen/world/physics/shape/: Circle.hpp  ConvexHull.hpp  Polygon.hpp  Shape.hpp
include/Yosai/: Application.hpp  ApplicationTime.hpp  GlobalColours.hpp  Yosai.hpp  defines.hpp
include/Yosai/ActionControl/: Action.hpp  ActionControl.hpp  ActionMap.hpp
include/Yosai/ActionControl/detail/: ActionControl.inl  ActionExpression.hpp  ActionMap.inl
include/Yosai/Conversion/: Conversion.hpp
include/Yosai/InputControl/: AbstractDeviceController.hpp  EventBuffer.hpp  InputControl.hpp  KeyboardController.hpp  MouseController.hpp  WindowController.hpp
include/Yosai/ResourceControl/: ResourceControl.hpp  ResourceHolder.hpp  SFMLClassLoaderMakers.hpp
include/Yosai/StateControl/: MenuState.hpp  State.hpp  StateControl.hpp  StateIdentifiers.hpp
include/Yosai/Structs/: ConfigurationData.hpp
include/Yosai/Time/: ApplicationClock.hpp  StopWatch.hpp
include/Yosai/Util/: Assertion.hpp  Logger.hpp  NonMovable.hpp  ThrowAssert.hpp  Util.hpp
include/Yosai/id/: ActionsIdentifiers.hpp  ResourceIdentifiers.hpp  StateIdentifiers.hpp
include/Yosai/models/: ConfigurationData.hpp  Materials.hpp
include/Yosai/states/: AllStates.hpp  GameState.hpp  MenuState.hpp  States.hpp
include/Yosai/ui/: Helper_UI.hpp
src/Kigen/: CMakeLists.txt
src/Kigen/action/: Action.cpp
src/Kigen/action/detail/: ActionExpression.cpp
src/Kigen/application/: ApplicationClock.cpp  BasicApplication.cpp
src/Kigen/conversion/: KeyConversion.cpp  to_string.cpp
src/Kigen/graphics/: Vector.cpp  Window.cpp
src/Kigen/input/: AbstractDevice.cpp  AbstractDeviceController.cpp  EventBuffer.cpp  InputControl.cpp  Keyboard.cpp  KeyboardController.cpp  Mouse.cpp  MouseController.cpp  Window.cpp  WindowController.cpp  WindowStatus.cpp
src/Kigen/physics/: Manifold.cpp  PhysicsScene.cpp  RigidBody.cpp
src/Kigen/render/: Window.cpp
src/Kigen/service/: Locator.cpp  NullService.cpp  ServiceCamera.cpp  ServiceLocator.cpp
src/Kigen/state/: State.cpp  StateControl.cpp
src/Kigen/utils/: Logger.cpp  Random.cpp  StopWatch.cpp
src/Kigen/utils/locator/: Locator.cpp  NullService.cpp
src/Kigen/world/: Component.cpp  Entity.cpp  EntityFactory.cpp  World.cpp
src/Kigen/world/component/: Component.cpp  DrawableCircle.cpp  DrawableCircleComponent.cpp  DrawableDebugBody.cpp  PhysicsBody.cpp  PhysicsComponent.cpp
src/Kigen/world/message/: Message.cpp  MessageBus.cpp
src/Kigen/world/physics/: Collision.cpp  Manifold.cpp  Math.cpp  PhysicsScene.cpp  RigidBody.cpp
src/Kigen/world/physics/collision/: Collision.cpp  CollisionCircleAndCircle.cpp  CollisionCircleAndPolygon.cpp  CollisionPolygonAndPolygon.cpp
src/Kigen/world/physics/law/: EnergyLossLaw.cpp  GravitationLaw.cpp
src/Kigen/world/physics/shape/: Circle.cpp  ConvexHull.cpp  Polygon.cpp
src/Yosai/: Application.cpp  ApplicationTime.cpp  CMakeLists.txt  Yosai.cpp  main.cpp
src/Yosai/ActionControl/: Action.cpp
src/Yosai/ActionControl/detail/: ActionExpression.cpp
src/Yosai/Conversion/: KeyConversion.cpp
src/Yosai/InputControl/: AbstractDeviceController.cpp  EventBuffer.cpp  InputControl.cpp  KeyboardController.cpp  MouseController.cpp  WindowController.cpp
src/Yosai/StateControl/: MenuState.cpp  State.cpp  StateControl.cpp
src/Yosai/States/: MenuState.cpp
src/Yosai/Structs/: ConfigurationData.cpp
src/Yosai/Time/: ApplicationClock.cpp  StopWatch.cpp
src/Yosai/Util/: Logger.cpp
src/Yosai/id/: ResourceIdentifiers.cpp
src/Yosai/models/: ConfigurationData.cpp
src/Yosai/states/: GameState.cpp  MenuState.cpp
